# hnews

./: .gitignore  CHANGELOG.md  README.md  devenv.nix  hnews.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: HNews.hs  Hnews.hs
src/HNews/: Entry.hs  Feed.hs
src/HNews/Feed/: GitHub.hs  RSS.hs
test/: Spec.hs
test/HNews/Feed/: GitHubSpec.hs
